    + [FL] Adapt VCS-* headers for move from SVN to git.
  * debian/copyright:
    + [FL] Add Patrick Schoenfeld (for checks/watch-file).
    + [ADB] Update repository information and GPL2 URL.
  
  * doc/CREDITS:
    + [FL] Add Raphael Geissert and Adam D. Barratt.
  
  * lib/Lintian/Collect/Binary.pm:
    + [FL] Add support for file-info file.
    + [FL] Add support for objdump-info file.
  
  * man/lintian.1:
    + [FL] Document watch-file check.
  
  * reporting/html_reports:
    + [FL] Mark the tag pages with the correct code.
  * reporting/templates/tag.tmpl:
    + [FL] Mark overridden tags.
  * reporting/templates/maintainer.tmpl:
    + [FL] Add useful links for each source package.
      With layout help by Jordà Polo.
    + [FL] Include Co-maintained packages in the summary
      at the top of the page.  Also sort the list.  Patch
      by Jordà Polo.

 --

lintian (1.24.1) unstable; urgency=medium
  
  The "mostly for the benefit of lintian.debian.org only" release.

  * frontend/lintian:
    + [FL] Increase LAB_FORMAT to 8. This should have happened
      in 1.23.47, since the unpack-binpkg-l1 then produced a
      new file which checks depend upon.  Since this only
      affects static labs and only if packages get rechecked
      (i.e. not on harness -i runs) it only got noticed now.
      Use urgency=medium for this fix.
  
  * checks/watch-file:
    + [FL] Fix the order of two regular expression to use
      the more specific one first.  Patch by Raphael Geissert.
      (Closes: #485884)
  
  * unpack/unpack-binpkg-l1:
    + [FL] Don't include version number from Source: field in
      the source symlink.  Noted by RA.  (Closes: #485474)
  
  * lib/Lintian/Collect/Binary.pm:
    + [FL] New module for retrieving binary package information.
  
  * reporting/checkout-release:
    + [FL] New helper script for lintian.d.o maintenance.
  * reporting/config:
    + [FL] Generate files in $HOME/www directly instead
      of $HOME/www/reports.